Fix for column header text align.

--- a/styles/blg.scss
+++ b/styles/blg.scss
@@ -1184,11 +1184,11 @@ table.blg-dataTable.display tbody td {
   cursor: no-drop;
 }
 
-.ag-header-cell-left {
+div.ag-header-cell-left {
   text-align: left;
 }
 
-.ag-header-cell-center {
+div.ag-header-cell-center {
   text-align: center;
 }
 
